
[TestPrintCycloneDX14Results_WithDependencies/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1
}

---

[TestPrintCycloneDX14Results_WithDependencies/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1
}

---

[TestPrintCycloneDX14Results_WithDependencies/one_source_with_multiple_artifacts,_used_by_one_of_them - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib1",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT"
    },
    {
      "bom-ref": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib2",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT"
    }
  ],
  "dependencies": [
    {
      "ref": "pom.xml",
      "dependsOn": [
        "lib1/pom.xml",
        "lib2/pom.xml"
      ]
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithDependencies/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1
}

---

[TestPrintCycloneDX14Results_WithDependencies/one_source_with_one_artifact,_no_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3"
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithDependencies/one_source_with_one_artifact,_one_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3"
    }
  ]
}

---

[TestPrintCycloneDX14Results_WithDependencies/one_source_with_one_package,_no_artifacts - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.4.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.4",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/com.nobody%3Amine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/com.nobody%3Amine1@1.2.3"
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/multiple_sources_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1
}

---

[TestPrintCycloneDX15Results_WithDependencies/no_sources - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_multiple_artifacts,_used_by_one_of_them - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib1",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib1@1.0-SNAPSHOT"
    },
    {
      "bom-ref": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT",
      "type": "library",
      "name": "dev.foo:lib2",
      "version": "1.0-SNAPSHOT",
      "purl": "pkg:maven/dev.foo/lib2@1.0-SNAPSHOT"
    }
  ],
  "dependencies": [
    {
      "ref": "pom.xml",
      "dependsOn": [
        "lib1/pom.xml",
        "lib2/pom.xml"
      ]
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_no_packages - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_artifact,_no_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3"
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_artifact,_one_dependsOn - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:maven/com.nobody/mine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:maven/com.nobody/mine1@1.2.3"
    }
  ]
}

---

[TestPrintCycloneDX15Results_WithDependencies/one_source_with_one_package,_no_artifacts - 1]
{
  "$schema": "http://cyclonedx.org/schema/bom-1.5.schema.json",
  "bomFormat": "CycloneDX",
  "specVersion": "1.5",
  "version": 1,
  "components": [
    {
      "bom-ref": "pkg:npm/com.nobody%3Amine1@1.2.3",
      "type": "library",
      "name": "com.nobody:mine1",
      "version": "1.2.3",
      "purl": "pkg:npm/com.nobody%3Amine1@1.2.3"
    }
  ]
}

---
